# substrate-runtime-fuzzer

./: justfile
kusama/: Cargo.toml
kusama/src/: main.rs
runtimes/: Cargo.toml
scripts/: config.toml  fuzzer_daemon.py  handle_failure.py  setup_server.sh
