[package]
name = "substrate-runtimes-fuzzers"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "kusama",
    "asset-hub-kusama",
    "asset-hub-polkadot",
    "coretime-kusama",
    "polkadot",
    "runtime-call",
]

[workspace.dependencies]

ziggy = { version = "1.3.5", default-features = false }

polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
asset-hub-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
# bridge-hub-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.2", default-features = false }
collectives-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
coretime-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
people-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }

staging-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
asset-hub-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
# bridge-hub-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.2", default-features = false }
coretime-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
# encointer-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.2", default-features = false }
glutton-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
people-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }

system-parachains-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
polkadot-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
kusama-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }

codec = { version = "*", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }
hex = "*"
scale-info = { default-features = false, version = "*", features = ["std"] }

staging-xcm = { default-features = false, version = "*" }

parachains-common = { default-features = false, version = "*" }

frame-support = { default-features = false, version = "*" }
frame-system = { default-features = false, version = "*" }
frame-metadata = { default-features = false, version = "*", features = ["current", "decode", "std"] }

sp-runtime = { default-features = false, version = "*" }
sp-state-machine = { version = "*", default-features = false }
sp-consensus-aura = { default-features = false, version = "*" }
sp-trie = { default-features = false, version = "*" }
sp-core = { default-features = false, version = "*" }
sp-authority-discovery = { default-features = false, version = "*" }
sp-consensus-babe = { default-features = false, version = "*" }
sp-consensus-beefy = { default-features = false, version = "*" }
sp-application-crypto = { default-features = false, version = "*" }

pallet-timestamp = { default-features = false, version = "*" }
pallet-balances = { default-features = false, version = "*" }
pallet-assets = { default-features = false, version = "*" }
pallet-xcm = { default-features = false, version = "*" }
pallet-utility = { default-features = false, version = "*" }
pallet-proxy = { default-features = false, version = "*" }
pallet-multisig = { default-features = false, version = "*" }
pallet-vesting = { default-features = false, version = "*" }
pallet-remote-proxy = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.5", default-features = false }
pallet-recovery = { default-features = false, version = "*" }
pallet-whitelist = { default-features = false, version = "*" }
pallet-broker = { default-features = false, version = "*" }
pallet-staking-async-ah-client = { default-features = false, version = "*" }
pallet-bags-list = { default-features = false, version = "*" }
pallet-bounties = { default-features = false, version = "*" }
pallet-grandpa = { default-features = false, version = "*" }
pallet-identity = { default-features = false, version = "*" }
pallet-referenda = { default-features = false, version = "*" }
pallet-society = { default-features = false, version = "*" }
pallet-staking = { default-features = false, version = "*" }
pallet-treasury = { default-features = false, version = "*" }
pallet-revive = { default-features = false, version = "*" }

cumulus-primitives-core = { default-features = false, version = "*" }
cumulus-primitives-parachain-inherent = { default-features = false, version = "*" }
cumulus-pallet-parachain-system = { default-features = false, version = "*" }
cumulus-test-relay-sproof-builder = { default-features = false, version = "*" }

polkadot-parachain-primitives = { default-features = false, version = "*" }
polkadot-primitives = { default-features = false, version = "*" }
polkadot-runtime-parachains = { version = "*", default-features = false }
polkadot-runtime-common = { version = "*", default-features = false }
